Changes of implementation are completed. Bug fixed #55